samples/_failures_safe/1761223022_2cfb00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00779e17.c: In function ‘main’:
./samples/SAFE/__tmp_00779e17.c:160:5: error: expected declaration or statement at end of input
  160 |     init_graph(&graph, nodes);
      |     ^~~~~~~~~~
